--- a/bundle/config
+++ b/bundle/config
@@ -1,2 +1,4 @@
 ---
-BUNDLE_PATH: vendor/bundle
+BUNDLE_PATH: "vendor/bundle"
+BUNDLE_WITHOUT: "production"
+BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
