--- a/bundle/config
+++ b/bundle/config
@@ -2,3 +2,4 @@
 BUNDLE_PATH: "vendor/bundle"
 BUNDLE_WITHOUT: "production"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
+BUNDLE_BUILD__PUMA: "--with-cppflags=-I/usr/local/opt/openssl/include"
