--- a/bundle/config
+++ b/bundle/config
@@ -3,3 +3,4 @@ BUNDLE_PATH: "vendor/bundle"
 BUNDLE_WITHOUT: "production"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
 BUNDLE_BUILD__PUMA: "--with-cppflags=-I/usr/local/opt/openssl/include"
+BUNDLE_BUILD__CHARLOCK_HOLMES: "--with-icu-dir=/usr/local/opt/icu4c --with-cxxflags='-Wno-reserved-user-defined-literal -std=c++11'"
