--- a/bundle/config
+++ b/bundle/config
@@ -4,3 +4,8 @@ BUNDLE_WITHOUT: "production"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
 BUNDLE_BUILD__PUMA: "--with-cppflags=-I/usr/local/opt/openssl/include"
 BUNDLE_BUILD__CHARLOCK_HOLMES: "--with-icu-dir=/usr/local/opt/icu4c --with-cxxflags='-Wno-reserved-user-defined-literal -std=c++11'"
+BUNDLE_GEM__TEST: "minitest"
+BUNDLE_GEM__MIT: "false"
+BUNDLE_GEM__COC: "false"
+BUNDLE_GEMS__SYNBIOZ__COM: "synbioz:ozgjuQRwKhxT3URPiQR"
+BUNDLE_JOBS: "4"
